nav overflow repair

--- a/css/newlanding.css
+++ b/css/newlanding.css
@@ -1373,6 +1373,24 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 background-attachment: fixed;
 background-size: cover;
   }
+  /* ul.navlinks{
+    display: none;
+  } */
+  ul.navlinks {
+    position: absolute;
+    right: 0px;
+    height: 92vh;
+    top: 0;
+    bottom: 0;
+    background-color: #003049;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    /* width: 100%; */
+    transform: translateX(100%);
+    transition: transform 0.5s ease-in;
+    z-index: 1500;
+  }
   .navlinks {
     position: absolute;
     right: 0px;
@@ -1383,10 +1401,13 @@ background-size: cover;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    /* width: 100%; */
     transform: translateX(100%);
     transition: transform 0.5s ease-in;
     z-index: 1500;
+  }
+  .navhyperlinks {
+    display: none;
   }
   .burger {
     display: block;
@@ -1475,6 +1496,20 @@ background-size: cover;
     text-align: left;
     line-height: 1.5em;
   }
+  .navhyperlinks-active {
+    display: block;
+  }
+  ul.nav-active{
+    transform: translateX(0%);
+    border-left: 2px solid #85D4FF;
+    border-bottom: 2px solid #85D4FF;
+    border-top: 2px solid #85D4FF;
+    border-right: 2px solid #85D4FF;
+    opacity: 97%;
+    display: inherit;
+    width: 100%;
+    background-image: linear-gradient(to top, #0077B6, #0077B6, #0077B6, #00A896);
+  }
   .nav-active{
     transform: translateX(0%);
     border-left: 2px solid #85D4FF;
@@ -1482,6 +1517,8 @@ background-size: cover;
     border-top: 2px solid #85D4FF;
     border-right: 2px solid #85D4FF;
     opacity: 97%;
+    display: flex;
+    width: 100%;
     background-image: linear-gradient(to top, #0077B6, #0077B6, #0077B6, #00A896);
   }
   @media screen and (max-width: 330px){
